overflow in screen height fixed

--- a/src/main.css
+++ b/src/main.css
@@ -22,11 +22,22 @@
 
 
 
+* { padding: 0; margin: 0; }
+html, body, #fullheight {
+	position: relative;
+    min-height: 100% !important;
+    height: 100%;
+}
 
+#app {
+	height: 100%;
+
+}
 
 body {
 	font-family: sans-serif;
 	margin:0;
+	overflow: hidden;
 }
 
 .w100 {
